# realtime-speech-to-speech

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  POST.en.md  POST.it.md  PR_TO_SMITHY.md  README.md  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
app/: __init__.py  main.py  pipeline.py  polly.py  rooms.py  session.py  timing.py  transcribe.py  translate.py  voices.py
audio_client/: cli.py
benchmarks/: analyze_timings.py  measure_e2e.py
images/: 0.2.0.en.mermaid  0.2.0.it.mermaid  0.3.0.en.mermaid  0.3.0.it.mermaid  architecture.drawio  architecture.post.drawio
static/: app.js  index.html
tests/: conftest.py  test_analyze_timings.py  test_main.py  test_pipeline.py  test_polly.py  test_rooms.py  test_session.py  test_timing.py  test_transcribe.py  test_translate.py  test_voices.py
